[package]
name = "soter-boringssl-sys"
version = "0.1.0"
edition = "2018"
authors = ["rust-themis developers"]
categories = ["cryptography", "external-ffi-bindings"]
description = "FFI binding to BoringSSL for Soter"
homepage = "https://www.cossacklabs.com/themis/"
keywords = ["crypto", "Themis", "BoringSSL"]
license = "Apache-2.0 AND MIT AND OpenSSL AND ISC"
readme = "README.md"
repository = "https://github.com/ilammy/themis.rs"
