[package]
name = "soter"
version = "0.1.0"
edition = "2018"
authors = ["rust-themis developers"]

[dependencies]
boringssl = { package = "soter-boringssl", version = "=0.1.0", path = "../soter-boringssl" }

[dev-dependencies]
criterion = "0.3.0"
hex-literal = "0.3.1"

[features]
long_tests = []

[[bench]]
name = "crc32"
harness = false

[[bench]]
name = "rand"
harness = false
